2005-04-22  Sven Neumann  <sven@gimp.org>

	* app/widgets/gimpdockable.[ch]: removed Close button from
	dockables as suggested in bug #301348.

2005-04-21  Manish Singh  <yosh@gimp.org>

	* plug-ins/common/postscript.c: pass -dUseCropBox when loading PDF
	files, to match Acrobat Reader's behavior in honoring CropBox over
	MediaBox. Fixes bug #301432.

2005-04-21  Sven Neumann  <sven@gimp.org>

	* plug-ins/dbbrowser/gimpprocview.c: make more labels selectable.

2005-04-21  Nathan Summers  <rock@gimp.org>

	* data/images/gimp-splash.png: removed flare effect
	
2005-04-20  Nathan Summers  <rock@gimp.org>

	* data/images/gimp-splash.png: new splash

2005-04-20  Sven Neumann  <sven@gimp.org>

	* plug-ins/Lighting/images/Makefile.am
	* plug-ins/gfig/images/Makefile.am
	* plug-ins/gimpressionist/Makefile.am
	* plug-ins/imagemap/images/Makefile.am
	* plug-ins/pagecurl/Makefile.am
	* plug-ins/rcm/images/Makefile.am: use $(GDK_PIXBUF_CSOURCE) as
	defined by the configure script.

	* plug-ins/helpbrowser/Makefile.am
	* plug-ins/helpbrowser/wilber-reading.png: added icon.

	* plug-ins/helpbrowser/gimpthrobber.[ch]: added API to set an image
	to be used instead of the stock-id.

	* plug-ins/helpbrowser/dialog.c: use the Reading Wilber icon for
	the throbber and as window icon.

2005-04-20  Sven Neumann  <sven@gimp.org>

	* libgimpwidgets/gimpstock.c
	* themes/Default/images/Makefile.am: reverted the change to
	register a wilber icon in button size; it broke the color selector.

2005-04-20  Sven Neumann  <sven@gimp.org>

	* libgimpcolor/gimprgb-parse.c: fixed typos in comments.

2005-04-20  Sven Neumann  <sven@gimp.org>

	* libgimp/gimpui.c (gimp_ensure_modules): cosmetics.

2005-04-20  Sven Neumann  <sven@gimp.org>

	* plug-ins/common/mail.c: set charset to UTF-8. Initialize the
	filename from the image's filename. Don't set From: if the Sender
	entry remains blank. Reordered dialog.

2005-04-20  Michael Natterer  <mitch@gimp.org>
