@@ -1,5 +1,12 @@
 2005-04-22  Sven Neumann  <sven@gimp.org>
 
+	* libgimpwidgets/gimpintstore.c: removed the "row_deleted" handler
+	which used to take care of reinserting the "Empty" item when the
+	last row gets deleted. This doesn't work any longer with GTK+ 2.6
+	and I see now way to make it work again. Fixes bug #301524.
+
+2005-04-22  Sven Neumann  <sven@gimp.org>
+
 	* app/widgets/gimpdockable.[ch]: removed Close button from
 	dockables as suggested in bug #301348.
 
